@@ -215,6 +215,7 @@ t/local/42_info_callback.t
 t/local/43_misc_functions.t
 t/local/44_sess.t
 t/local/45_exporter.t
+t/local/46_msg_callback.t
 t/local/50_digest.t
 t/local/61_threads-cb-crash.t
 t/local/62_threads-ctx_new-deadlock.t
